<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">

   <AbsoluteLayout
       android:id="@+id/Line1"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:orientation="vertical" >

       <TextView
           android:id="@+id/TextView01"
           android:layout_width="84dp"
           android:layout_height="32dp"
           android:layout_x="14dp"
           android:layout_y="122dp"
           android:text="@string/phoneout" />

       <TextView
           android:id="@+id/TextView02"
           android:layout_width="84dp"
           android:layout_height="32dp"
           android:layout_x="14dp"
           android:layout_y="175dp"
           android:text="@string/phonein" />

       <TextView
           android:id="@+id/TextView03"
           android:layout_width="119dp"
           android:layout_height="32dp"
           android:layout_x="134dp"
           android:layout_y="175dp"
           android:text="@string/myphone" />

       <TextView
           android:id="@+id/TextView04"
           android:layout_width="84dp"
           android:layout_height="32dp"
           android:layout_x="14dp"
           android:layout_y="218dp"
           android:text="@string/smsout" />

       <TextView
           android:id="@+id/TextView05"
           android:layout_width="119dp"
           android:layout_height="32dp"
           android:layout_x="134dp"
           android:layout_y="218dp"
           android:text="@string/myphone" />

       <TextView
           android:id="@+id/TextView06"
           android:layout_width="84dp"
           android:layout_height="32dp"
           android:layout_x="14dp"
           android:layout_y="256dp"
           android:text="@string/smsin" />

       <TextView
           android:id="@+id/TextView07"
           android:layout_width="119dp"
           android:layout_height="32dp"
           android:layout_x="132dp"
           android:layout_y="256dp"
           android:text="@string/myphone" />

       <TextView
           android:id="@+id/editText1"
           android:layout_width="119dp"
           android:layout_height="32dp"
           android:layout_x="134dp"
           android:layout_y="123dp"
           android:text="@string/myphone" />

   </AbsoluteLayout>
   
   <AbsoluteLayout
       android:id="@+id/Line2"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:orientation="vertical" >
	</AbsoluteLayout>

	
	<AbsoluteLayout
       android:id="@+id/Line3"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:orientation="vertical" >
	</AbsoluteLayout>
	
	<AbsoluteLayout
       android:id="@+id/Line4"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:orientation="vertical" >
	</AbsoluteLayout>
</FrameLayout>
